Fix WCAG gaps (#2921)
* Make front page title to be h1 instead of h2.

* Changed primary, secondary colors and h1 style to match contrast levels.

* Changed colorizer default scheme to match WCAG contrast rules.

* Changed background color for frontpage hero component.

* Changed button background color on hero component in front page.

* Compiled homepage styles.

* Fixed contrast of group membership color text.

* Fixed colors of datasets count and csv badges on search page.

* Compiled css for search page.

* Changed csv and zip badges color to match WCAG AAA contrast level.

* Changed secondary color to match WCAG AAA contrast level.

* Changed group membership label color to match WCAG AAA contrast level.

* Compiled styles.

* Addressing WCAG error of anchor element without link text

--- a/modules/dkan/dkan_dataset/css/dkan_dataset.css
+++ b/modules/dkan/dkan_dataset/css/dkan_dataset.css
@@ -249,7 +249,7 @@ div.vertical-tabs #edit-path-alias {
   padding-top: 0;
 }
 .view-dkan-datasets .view-header {
-  color: #c9c9c9;
+  color: #767676;
   font-size: 32px;
   font-weight: bold;
   margin-bottom: 15px;
@@ -476,7 +476,7 @@ li .heading:hover {
 }
 .label[data-format=csv],
 .label[data-format*=csv] {
-  background-color: #dfb100;
+  background-color: #645900;
 }
 .label[data-format=xls],
 .label[data-format*=xls] {
@@ -484,7 +484,7 @@ li .heading:hover {
 }
 .label[data-format=zip],
 .label[data-format*=zip] {
-  background-color: #686868;
+  background-color: #595959;
 }
 .label[data-format=api],
 .label[data-format*=api] {
