--- a/themes/nuboot_radix/scss/components/_panel.scss
+++ b/themes/nuboot_radix/scss/components/_panel.scss
@@ -152,10 +152,10 @@ h2.pane-title {
       width:100%;
       z-index: -1;
     }
-    h2,h3,h4 {
+    h1,h2,h3,h4 {
       color: #fff;
     }
-    h2.pane-title {
+    h1.pane-title {
       border-bottom: none;
       padding-bottom: 0;
     }
